Fix scrollbar bug

--- a/styles/global.css
+++ b/styles/global.css
@@ -108,8 +108,8 @@ body:has(.default-layout-root) {
 }
 body::after {
     content: "";
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width:100%;
     position: absolute;
     top: 0;
     left: 0;
